load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "test_lib",
    srcs = ["hashmap.go"],
    importpath = "try-out/test",
    visibility = ["//visibility:public"],
    deps = ["@com_github_zeebo_xxh3//:xxh3"],
)

go_test(
    name = "test_test",
    srcs = [
        "bench_map_test.go",
        "etcd_test.go",
        "key_test.go",
        "misc_test.go",
        "pebble_test.go",
        "tikv_client_test.go",
    ],
    embed = [":test_lib"],
    deps = [
        "@com_github_cockroachdb_pebble//:pebble",
        "@com_github_cockroachdb_pebble//sstable",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_pingcap_parser//model",
        "@com_github_pingcap_tidb//pkg/kv",
        "@com_github_pingcap_tidb//pkg/util/codec",
        "@com_github_pkg_errors//:errors",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//config",
        "@com_github_tikv_client_go_v2//error",
        "@com_github_tikv_client_go_v2//kv",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tikv_client_go_v2//txnkv",
        "@io_etcd_go_etcd_client_v3//:client",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
        "@org_golang_x_time//rate",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)
