load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "binlog-bigger-than-4g_lib",
    srcs = ["main.go"],
    importpath = "try-out/cmd/binlog-bigger-than-4g",
    visibility = ["//visibility:private"],
    deps = ["@com_github_go_sql_driver_mysql//:mysql"],
)

go_binary(
    name = "binlog-bigger-than-4g",
    embed = [":binlog-bigger-than-4g_lib"],
    visibility = ["//visibility:public"],
)
