load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "customer-create_lib",
    srcs = ["main.go"],
    importpath = "try-out/cmd/customer-create",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/tidb",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "customer-create",
    embed = [":customer-create_lib"],
    visibility = ["//visibility:public"],
)
