load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dm-latency_lib",
    srcs = [
        "db.go",
        "generator.go",
        "main.go",
        "monitor.go",
    ],
    importpath = "try-out/cmd/dm-latency",
    visibility = ["//visibility:private"],
    deps = ["@com_github_go_sql_driver_mysql//:mysql"],
)

go_binary(
    name = "dm-latency",
    embed = [":dm-latency_lib"],
    visibility = ["//visibility:public"],
)
