load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go-mysql_lib",
    srcs = ["main.go"],
    importpath = "try-out/cmd/go-mysql",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_mysql_org_go_mysql//mysql",
        "@com_github_go_mysql_org_go_mysql//replication",
    ],
)

go_binary(
    name = "go-mysql",
    embed = [":go-mysql_lib"],
    visibility = ["//visibility:public"],
)
