load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "prometheus-test_lib",
    srcs = ["foo.go"],
    importpath = "try-out/cmd/prometheus-test",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_pingcap_log//:log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "prometheus-test",
    embed = [":prometheus-test_lib"],
    visibility = ["//visibility:public"],
)
